--- a/config/database.yml
+++ b/config/database.yml
@@ -13,14 +13,15 @@
 #
 # Configure Using Gemfile
 # gem 'pg'
-#
+
+#Changed development work on KL local database
 development:
   adapter: postgresql
   encoding: unicode
-  database: gulch2_development
+  database: postgres
   pool: 5
   username: postgres
-  password: Copperhills
+  password:  
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
