--- a/config/database.yml
+++ b/config/database.yml
@@ -13,7 +13,8 @@
 #
 # Configure Using Gemfile
 # gem 'pg'
-#
+
+# Original Database for Git conflict purposes
 development:
   adapter: postgresql
   encoding: unicode
@@ -21,6 +22,15 @@ development:
   pool: 5
   username: postgres
   password: Copperhills
+
+#Kevin's local db settings- commented out:
+# development:
+#   adapter: postgresql
+#   encoding: unicode
+#   database: postgres
+#   pool: 5
+#   username: postgres
+#   password: 
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
